21: add dependency to workflow

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,6 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+            - name: Install libasound2
+              run: apt install libasound2-dev
 
       - name: Set up Go
         uses: actions/setup-go@v3
