--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           fetch-depth: 1
       - name: Install dependencies
-        run: apt install libasound2-dev libudev-dev pkg-config
+        run: sudo apt install libasound2-dev libudev-dev pkg-config
 
       - name: Set up Go
         uses: actions/setup-go@v3
