--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,6 +10,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
+      - name: Apt update
+        run: sudo apt update --fix-missing
+
       - name: Install dependencies
         run: sudo apt install libasound2-dev libudev-dev pkg-config
 
