flesh out unit test

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,7 +27,7 @@ jobs:
         run: go build -v ./...
 
       - name: Test
-        run: go test -v ./...
+        run: export CI=true && go test -v ./...
   # configuration: https://github.com/golangci/golangci-lint-action
   golangci:
     name: lint
