update example config

--- a/config.example.yml
+++ b/config.example.yml
@@ -2,6 +2,7 @@ version: 0.0.1
 content:
   PlayedPodcastTTL: "1m" # defaults to a month
   CheckInterval: "1m" # defaults to 1 minute
+  StrictPodcastSchedule: true
   Programs:
     - Name: "Indie Pop Rocks"
       Type: "web_radio"
