--- a/config.test.yml
+++ b/config.test.yml
@@ -1,5 +1,8 @@
 version: 0.0.1
 content:
+  PlayedPodcastTTL: "1m" # defaults to a month
+  CheckInterval: "1m" # defaults to 1 minute
+  StrictPodcastSchedule: true
   Programs:
     - Name: "gettysburg10"
       Type: "file"
