refactor create coverage report step

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,9 +49,10 @@ jobs:
           cache: true
 
       - name: Run Tests
-        run: | 
-          go test -coverprofile coverage.out 
-          go tool cover -html coverage.out -o coverage.html
+        run: go test -coverprofile coverage.out
+
+      - name: Create Coverage Report
+        run: go tool cover -html coverage.out -o coverage.html
 
       - name: Upload test coverage
         uses: actions/upload-artifact@v3
